# HPCortex

./: .buildinfo  .gitignore  LICENSE  Makefile.am  README.md  api_code.html  configure.ac  genindex.html  getting_started.html  hpcortex-config.in  index.html  installation.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  getting_started.doctree  index.doctree  installation.doctree
_sources/: getting_started.md.txt  index.rst.txt
benchmark/: Makefile.am  benchmarkBatchTensorDNNcomponentStep.cpp  benchmark_activated_deriv.cpp  benchmark_axpy_mat_thinmat.cpp  benchmark_batch3tensorContract.cpp  benchmark_batchTensorContractToMatrix.cpp  benchmark_decoder.cpp  benchmark_dnn.cpp  benchmark_dnn_weak_scaling.cpp  benchmark_matrixBatchTensorAxpy.cpp  benchmark_matrixBatchTensorContractLeft.cpp  benchmark_matrixBatchTensorContractRight.cpp  benchmark_matrixTensorContractComponent.cpp  benchmark_mul_mattranspose_thinmat.cpp  benchmark_multihead_self_attention.cpp  benchmark_tensor_reorder.cpp  benchmark_thin_mul_mat_mattranspose.cpp
doc/: Doxyfile  api_code.rst  conf.py  installation.md
examples/: Makefile.am  example_dnn.cpp  example_gcn_spring.cpp  example_train_embedding.cpp  example_transformer_encoder_decoder.cpp  example_transformers_common.hpp
include/: Accelerator.hpp  ActivationFuncs.hpp  BLAS.hpp  Batching.hpp  Buffers.hpp  Comms.hpp  Components.hpp  DDP.hpp  DynamicModel.hpp  Embeddings.hpp  Graph.hpp  HPCortex.hpp  Init.hpp  InstanceStorage.hpp  LayerIOcontainer.hpp  Layers.hpp  Linalg.hpp  LossFunctions.hpp  Makefile.am  ManagedArray.hpp  MemoryManager.hpp  ModelConfig.hpp  Optimizers.hpp  Padding.hpp  Performance.hpp  Pipelining.hpp  Random.hpp  RingBuffer.hpp  Serialization.hpp  Tensors.hpp  Testing.hpp  Timing.hpp
include/components/: Batch3tensorPairContractComponent.hpp  BatchTensorConcatenateComponent.hpp  BatchTensorDNNcomponent.hpp  BatchTensorDimensionSliceComponent.hpp  BatchedMatrixRowSoftMaxComponent.hpp  GNN.hpp  MatrixTensorContractComponent.hpp  MultiHeadAttentionComponent.hpp  NormComponent.hpp  ScaleComponent.hpp  ScaledDotProductAttentionComponent.hpp  ScaledDotProductAttentionHeadComponent.hpp  SoftMaxComponent.hpp
include/components/GNN/: EdgeAggregate.hpp  EdgeUpdate.hpp  GlobalUpdate.hpp  NodeAggregate.hpp  NodeUpdate.hpp
include/components/GNN/implementation/: EdgeAggregate.tcc  EdgeUpdate.tcc  GlobalUpdate.tcc  NodeAggregate.tcc  NodeUpdate.tcc
include/components/implementation/: BatchTensorDNNcomponent.tcc  BatchTensorDimensionSliceComponent.tcc  BatchedMatrixRowSoftMaxComponent.tcc  MatrixTensorContractComponent.tcc  MultiHeadAttentionComponent.tcc  NormComponent.tcc  ScaleComponent.tcc  ScaledDotProductAttentionComponent.tcc  ScaledDotProductAttentionHeadComponent.tcc  SoftMaxComponent.tcc
include/implementation/: Accelerator.tcc  Accelerator_CUDA.tcc  Accelerator_HIP.tcc  Accelerator_OMP.tcc  Accelerator_SYCL.tcc  ActivationFuncs.tcc  BLAS.tcc  Comms.tcc  DDP.tcc  Graph.tcc  LayerIOcontainer.tcc  Layers.tcc  Linalg.tcc  Linalg_BLAS.tcc  Linalg_CPU.tcc  Linalg_CPU_GPU.tcc  Linalg_GPU.tcc  Linalg_GPU_BLAS.tcc  LossFunctions.tcc  Optimizers.tcc  Serialization.tcc  Tensors.tcc
include/layers/: BatchTensorDNNlayer.hpp  ComponentLayerWrapper.hpp  ConvolutionLayer1D.hpp  DNNlayer.hpp  EmbedPositionsSinusoidalLayer.hpp  FlattenLayer.hpp  GCNblock.hpp  InputLayer.hpp  LayerCommon.hpp  MatrixTensorContractLayer.hpp  MultiHeadCrossAttentionLayer.hpp  MultiHeadSelfAttentionLayer.hpp  NormLayer.hpp  PairJoinLayer.hpp  PairSplitLayer.hpp  PipelineBlockLayer.hpp  ReplicateLayer.hpp  ScaledDotProductSelfAttentionLayer.hpp  SkipConnection.hpp  SoftMaxLayer.hpp  SumJoinLayer.hpp  TransformerDecoderBlock.hpp  TransformerEncoderDecoderBlock.hpp  UnflattenLayer.hpp
include/layers/implementation/: BatchTensorDNNlayer.tcc  ConvolutionLayer1D.tcc  DNNlayer.tcc  FlattenLayer.tcc  GCNblock.tcc  MatrixTensorContractLayer.tcc  MultiHeadSelfAttentionLayer.tcc  PipelineBlockLayer.tcc  ScaledDotProductSelfAttentionLayer.tcc  SkipConnection.tcc  SoftMaxLayer.tcc  TransformerDecoderBlock.tcc  TransformerEncoderDecoderBlock.tcc  UnflattenLayer.tcc
initial_expts/: diff.cc  (+5 more)
test/: Makefile.am  test_accelerator.cpp  test_activation.cpp  test_basic.cpp  test_comms.cpp  test_components.cpp  test_conv1d.cpp  test_conv1d_pipeline.cpp  test_cross_decoder.cpp  test_dnn_layer.cpp  test_dynamic_model.cpp  test_flatten_layer.cpp  test_managed_array.cpp  test_matrix_tensor_contract.cpp  test_memorymanager.cpp  test_multihead_cross_attention.cpp  test_multihead_self_attention.cpp  test_norm_layer.cpp  test_one_hidden_layer.cpp  test_optimizer.cpp  test_pair_split_layer.cpp  test_pipeline_1d.cpp  test_replicate_layer.cpp  test_scaled_dotproduct_self_attention.cpp  test_serialization.cpp  test_simple_linear.cpp  test_simple_linear_2d.cpp  test_simple_linear_ddp.cpp  test_simple_linear_pipeline.cpp  test_simple_linear_pipeline_ddp.cpp  test_skip_connection.cpp  test_skip_connection_pipeline.cpp  test_softmax.cpp  test_tensor.cpp
test/core/: Makefile.am  test_activation.cpp  test_blas.cpp  test_components.cpp  test_conv1d.cpp  test_cross_decoder.cpp  test_dnn_layer.cpp  test_dynamic_model.cpp  test_flatten_layer.cpp  test_gnn.cpp  test_lossfunction.cpp  test_managed_array.cpp  test_matrix_tensor_contract.cpp  test_multihead_cross_attention.cpp  test_multihead_self_attention.cpp  test_norm_layer.cpp  test_one_hidden_layer.cpp  test_optimizer.cpp  test_pair_split_layer.cpp  test_replicate_layer.cpp  test_scaled_dotproduct_self_attention.cpp  test_serialization.cpp  test_simple_linear.cpp  test_simple_linear_2d.cpp  test_skip_connection.cpp  test_softmax.cpp  test_tensor.cpp  test_tensor_reorder.cpp
test/core/test_gnn/: EdgeAggregate.hpp  EdgeUpdate.hpp  GCNblock.hpp  GlobalUpdate.hpp  Graph.hpp  NodeAggregate.hpp  NodeUpdate.hpp
test/mpi/: Makefile.am  test_comms.cpp  test_conv1d_pipeline.cpp  test_pipeline_1d.cpp  test_simple_linear_ddp.cpp  test_simple_linear_pipeline.cpp  test_simple_linear_pipeline_ddp.cpp  test_skip_connection_pipeline.cpp
(+22 files in other folders)
