nobase_include_HEADERS = HPCortexConfig.h Optimizers.hpp Padding.hpp ActivationFuncs.hpp Linalg.hpp DDP.hpp Pipelining.hpp Comms.hpp Layers.hpp DynamicModel.hpp Init.hpp RingBuffer.hpp InstanceStorage.hpp MemoryManager.hpp HPCortex.hpp LossFunctions.hpp ManagedArray.hpp Tensors.hpp Accelerator.hpp Testing.hpp Timing.hpp 