nobase_include_HEADERS = HPCortexConfig.h Optimizers.hpp Padding.hpp ActivationFuncs.hpp Linalg.hpp DDP.hpp Pipelining.hpp Comms.hpp Layers.hpp DynamicModel.hpp Init.hpp RingBuffer.hpp InstanceStorage.hpp MemoryManager.hpp layers/FlattenLayer.hpp layers/LayerCommon.hpp layers/ConvolutionLayer1D.hpp layers/UnflattenLayer.hpp layers/SkipConnection.hpp layers/InputLayer.hpp layers/DNNlayer.hpp HPCortex.hpp LossFunctions.hpp ManagedArray.hpp Tensors.hpp Accelerator.hpp Testing.hpp Timing.hpp layers/implementation/UnflattenLayer.tcc layers/implementation/ConvolutionLayer1D.tcc layers/implementation/SkipConnection.tcc layers/implementation/FlattenLayer.tcc layers/implementation/DNNlayer.tcc implementation/Comms.tcc implementation/DDP.tcc implementation/LossFunctions.tcc implementation/ActivationFuncs.tcc implementation/Tensors.tcc 