SUBDIRS =
AM_CPPFLAGS = -I$(top_srcdir)/include
LDADD = ../src/libmlcortex.la
testdir = $(prefix)/test
test_PROGRAMS = test_simple_linear_pipeline_ddp test_dynamic_model test_basic test_one_hidden_layer test_comms test_simple_linear_ddp test_memorymanager test_simple_linear test_simple_linear_pipeline test_accelerator test_pipeline_1d 
test_simple_linear_pipeline_ddp_SOURCES = test_simple_linear_pipeline_ddp.cpp 
test_simple_linear_pipeline_ddp_LDADD = $(LDADD)
test_dynamic_model_SOURCES = test_dynamic_model.cpp 
test_dynamic_model_LDADD = $(LDADD)
test_basic_SOURCES = test_basic.cpp 
test_basic_LDADD = $(LDADD)
test_one_hidden_layer_SOURCES = test_one_hidden_layer.cpp 
test_one_hidden_layer_LDADD = $(LDADD)
test_comms_SOURCES = test_comms.cpp 
test_comms_LDADD = $(LDADD)
test_simple_linear_ddp_SOURCES = test_simple_linear_ddp.cpp 
test_simple_linear_ddp_LDADD = $(LDADD)
test_memorymanager_SOURCES = test_memorymanager.cpp 
test_memorymanager_LDADD = $(LDADD)
test_simple_linear_SOURCES = test_simple_linear.cpp 
test_simple_linear_LDADD = $(LDADD)
test_simple_linear_pipeline_SOURCES = test_simple_linear_pipeline.cpp 
test_simple_linear_pipeline_LDADD = $(LDADD)
test_accelerator_SOURCES = test_accelerator.cpp 
test_accelerator_LDADD = $(LDADD)
test_pipeline_1d_SOURCES = test_pipeline_1d.cpp 
test_pipeline_1d_LDADD = $(LDADD)

