SUBDIRS =
AM_CPPFLAGS = -I$(top_srcdir)/include
AM_LDFLAGS = -Wl,-rpath=$(prefix)/lib
LDADD = -L$(top_builddir)/src -lmlcortex
testdir = $(prefix)/test
test_PROGRAMS = test_skip_connection test_activation test_simple_linear_pipeline_ddp test_managed_array test_dynamic_model test_basic test_one_hidden_layer test_comms test_skip_connection_pipeline test_simple_linear_ddp test_memorymanager test_simple_linear test_simple_linear_pipeline test_accelerator test_pipeline_1d 
test_skip_connection_SOURCES = test_skip_connection.cpp 
test_skip_connection_LDADD = $(LDADD)
test_skip_connection_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_activation_SOURCES = test_activation.cpp 
test_activation_LDADD = $(LDADD)
test_activation_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_simple_linear_pipeline_ddp_SOURCES = test_simple_linear_pipeline_ddp.cpp 
test_simple_linear_pipeline_ddp_LDADD = $(LDADD)
test_simple_linear_pipeline_ddp_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_managed_array_SOURCES = test_managed_array.cpp 
test_managed_array_LDADD = $(LDADD)
test_managed_array_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_dynamic_model_SOURCES = test_dynamic_model.cpp 
test_dynamic_model_LDADD = $(LDADD)
test_dynamic_model_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_basic_SOURCES = test_basic.cpp 
test_basic_LDADD = $(LDADD)
test_basic_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_one_hidden_layer_SOURCES = test_one_hidden_layer.cpp 
test_one_hidden_layer_LDADD = $(LDADD)
test_one_hidden_layer_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_comms_SOURCES = test_comms.cpp 
test_comms_LDADD = $(LDADD)
test_comms_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_skip_connection_pipeline_SOURCES = test_skip_connection_pipeline.cpp 
test_skip_connection_pipeline_LDADD = $(LDADD)
test_skip_connection_pipeline_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_simple_linear_ddp_SOURCES = test_simple_linear_ddp.cpp 
test_simple_linear_ddp_LDADD = $(LDADD)
test_simple_linear_ddp_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_memorymanager_SOURCES = test_memorymanager.cpp 
test_memorymanager_LDADD = $(LDADD)
test_memorymanager_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_simple_linear_SOURCES = test_simple_linear.cpp 
test_simple_linear_LDADD = $(LDADD)
test_simple_linear_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_simple_linear_pipeline_SOURCES = test_simple_linear_pipeline.cpp 
test_simple_linear_pipeline_LDADD = $(LDADD)
test_simple_linear_pipeline_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_accelerator_SOURCES = test_accelerator.cpp 
test_accelerator_LDADD = $(LDADD)
test_accelerator_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@
test_pipeline_1d_SOURCES = test_pipeline_1d.cpp 
test_pipeline_1d_LDADD = $(LDADD)
test_pipeline_1d_LINK = $(CXXLD) $(AM_LDFLAGS) $(LDFLAGS) -o $@

